--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
     <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
     <ul>
       <li>
-        <strong>Transition Properties of Doubly Heavy Baryons: Radiative and Semileptonic Decays Using the Hypercentral Constituent Quark Model</strong><br>
+        <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
         <em>Published in International Journal of Theoretical Physics (IJTP, 2025)</em><br>
         <a class="read-button" href="research/dhb-ijtp.pdf" target="_blank">Read Full Article</a>
       </li>
       <li>
-        <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons in the Hypercentral Model</strong><br>
+        <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</strong><br>
         <em>Published in European Physical Journal Plus (EPJP, 2025)</em><br>
         <a class="read-button" href="research/shb-epjp.pdf" target="_blank">Read Full Article</a>
       </li>
