--- a/index.html
+++ b/index.html
@@ -110,7 +110,14 @@
       <p>Official Website</p>
     </div>
   </div>
+<div class="poetic-line">“I study what doesn’t exist. And I write for what was never said.” — Kinjal</div>
 
+  <div class="intro">
+    <div class="intro-left">
+      $1<br><em>Researcher. Writer. Quietly documenting what lives between particles and people.</em></p>
+    </div>
+  </div>
+  
   <section id="research">
     <h2>Research Articles</h2>
     <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
