--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Georgia', serif;
+     @font-face {
+  font-family: 'Centaur';
+  src: url('fonts/centaur.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+body {
+  font-family: 'Centaur', Georgia, serif;
+}
+
       background: #fdfcf9;
       color: #222;
       text-align: center;
