--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kinjal Patel | Official Website</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
      @font-face {
-  font-family: 'Centaur';
+ font-family: 'Cormorant Garamond', Georgia, serif;
   src: url('fonts/centaur.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 body {
-  font-family: 'Centaur', Georgia, serif;
+  margin: 0;
+  font-family: 'Cormorant Garamond', Georgia, serif;
+  background: #fdfcf9;
+  color: #222;
+  line-height: 1.7;
+}
+
 }
 
       background: #fdfcf9;
