--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@ body {
       padding: 0 1rem;
     }
     section {
-      padding: 2rem;
+  padding: 4rem 1rem 2rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+  padding: 2rem;
       max-width: 720px;
       margin: 0 auto;
     }
