--- a/index.html
+++ b/index.html
@@ -137,22 +137,22 @@
     “I study what doesn’t exist. And I write what can't be said.” — Kinjal
   </div>
 
-  <section id="research">
-    <h2>Research Articles</h2>
-    <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
-    <ul>
-      <li>
-        <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
-        <em>Published in International Journal of Theoretical Physics (IJTP, 2025)</em><br>
-        <a class="read-button" href="research/dhb-ijtp.pdf" target="_blank">Read Full Article</a>
-      </li>
-      <li>
-        <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</strong><br>
-        <em>Published in European Physical Journal Plus (EPJP, 2025)</em><br>
-        <a class="read-button" href="research/shb-epjp.pdf" target="_blank">Read Full Article</a>
-      </li>
-    </ul>
-  </section>
+ <section id="research">
+  <h2>Research Articles</h2>
+  <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
+  <ul>
+    <li>
+      <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
+      <em>Published in International Journal of Theoretical Physics (IJTP, 2025)</em><br>
+      <a class="read-button" href="https://doi.org/10.1007/s10773-025-05997-5" target="_blank">Read Full Article</a>
+    </li>
+    <li>
+      <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</strong><br>
+      <em>Published in European Physical Journal Plus (EPJP, 2025)</em><br>
+      <a class="read-button" href="https://doi.org/10.1140/epjp/s13360-025-06398-7" target="_blank">Read Full Article</a>
+    </li>
+  </ul>
+</section>
 
   <a class="shop-button" href="https://amzn.in/d/38fGir8" target="_blank">🛍️ Buy My Book on Amazon</a>
 
